@@ -228,6 +228,7 @@
   <string name="msg_task_undo">Undo task</string>
   <string name="msg_recipes_enough_in_stock">Enough in stock</string>
   <string name="msg_recipes_enough_in_stock_filter">(%1$d) Enough in stock</string>
+  <string name="msg_recipes_enough_in_stock_amount">Enough in stock (%1$s)</string>
   <string name="msg_recipes_not_enough_but_on_shopping_list_filter">(%1$d) Not enough in stock but on shopping list</string>
   <string name="msg_recipes_not_enough_filter">(%1$d) Not enough in stock</string>
   <string name="msg_recipes_not_enough">Not enough in stock</string>
