@@ -40,6 +40,7 @@
 - Improved: Master object lists now have fuzzy search (#610)
 - Improved: Consume quick mode confirmation page now has option to open instead of consume (#572)
 - Improved: Allow changing stock unit of product if no transaction was made since creation (#635)
+- Improved: Ingredients display available amount in stock if fulfilled
 - Fixed: F-Droid build should work again (#566)
 - Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
 - Fixed: Wrong ingredient amount in the recipe view with base servings other than 1 (#584)
